Fix spacings

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -10,6 +10,6 @@
 		This is why you have to adjust the required margin every time you change something.
 	 */
   @include forPrinter {
-    margin-top: 24cm;
+    margin-top: 15cm;
   }
 }
